--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     Hello World!
-    <h1>Welcome to my page</h1>
+    <h1>Welcome to my page!</h1>
     <h2>Hello</h2>
 </body>
 </html>
