--- a/hello.html
+++ b/hello.html
@@ -8,11 +8,7 @@
 </head>
 <body>
     Hello World!
-<<<<<<< HEAD
-    <h1>Welcome to my page!!</h1>
-=======
-    <h1>Welcome to my page!</h1>
->>>>>>> dc7e4947ec161044f0dde25a772d3f3f962103bc
+    <h1 style="color: blue;">Welcome to my page</h1>
     <h2>Hello</h2>
 </body>
 </html>
